--- a/index.html
+++ b/index.html
@@ -20,11 +20,32 @@
         </div>
 
         <div id="container">
-            <h1>Call Alexander</h1>
 
+            <div id="intro_box">
+                <h1>Calling Alexander</h1>
+                <img src="/assets/bell_and_phone.png" width="70%">
+            </div>
+
+            <div id="intro_text">
+                Explore the timeline of Alexander Graham Bell's life and inventions!  
+                <br><br>
+                You'll notice that some items have a special note:
+                <br><br><center><span class="dial">DIAL 123</span></center><br>
+
+                This means that you'll have to dial that number on the rotary phone to see more items from that moment in time. 
+
+                <br><br><br>
+
+                <strong><span id="arrow">Scroll for more &#x2193;</span></strong> 
+            </div>
+
+            <!-- <center><img src="/assets/phone.png" width="25%"></center> -->
             <!-- <div id="statusText">GET &#x2764;</div> -->
         
         </div>
+
+        <hr class="style11">
+        <img src="/assets/receiver_patent.png" width="100%">
 
         <script src="/js/bluetoothPhone.js"></script>
         <script src="/js/app.js"></script>
